// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle should increase the count by 1 1`] = `
<div>
  <div
    class="productCard undefined"
  >
    <h1>
      Product Card
    </h1>
    <p>
      0
    </p>
    <button>
      Increase by 1
    </button>
  </div>
</div>
`;

exports[`ProductTitle should render the card correctly 1`] = `
<div>
  <div
    class="productCard undefined"
  >
    <h1>
      Product Card
    </h1>
  </div>
</div>
`;
